web/src/style.css
/* ... */
.entry .surrogate-title {
  font-size: 24px;
  width: min(calc(100vw - 120px), 400px);
}

.entry-title-tangible {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: inline-block;
  font-size: calc(var(--size) * 1px);
  line-height: 40px;
  overflow: hidden;
  color: transparent;
  font-family: var(--title-font);
  font-weight: 900;
}

.entry-preview {
  max-width: 600px;
  color: var(--color-fg-secondary);
  font-size: 14px;
  line-height: 24px;
  margin-bottom: 20px;
}

.entry-time {
  font-size: 14px;
  color: var(--color-fg-secondary);
  line-height: 24px;
  display: flex;
  justify-content: flex-start;
  align-items: center;

  & svg {
    height: 16px;
    width: 16px;
    margin-left: 5px;
    fill: var(--color-fg-icon);
  }
}

/* Tag list */
.tag-list {
  padding-top: 120px;
  --header-size: 80px;
  @media (max-width: 800px) {
    --header-size: 64px;
  }
}
.tag-header {
  position: relative;
  margin-bottom: -15px;
  display: flex;
  align-items: center;;
  color: var(--color-fg-secondary);
}
.tag-header svg {
  height: var(--header-size);
  width: var(--header-size);
  transform: translateY(10px);
  clip-path: inset(0 0 10px 0);
  fill: var(--color-fg-secondary);
}
.tag-header:after {
  content: '';
  position: absolute;
  top: 0%;
  bottom: 0;
  left: 0;
  right: 0;
  pointer-events: none;
  background: linear-gradient(
    180deg,
    transparent 50%,
    var(--color-bg) 80%
  )
}
.tag-name {
  font-size: var(--header-size);
  line-height: var(--header-size);
  font-weight: bold;
  font-family: var(--title-font);
}

/* Posts */
.post {
  position: absolute;
  width: 100%;
  top: 0;

  --title-line-height: 60px;
  --title-line-cnt: 1;
  --post-top-gutter: clamp(
    calc(120px + var(--title-line-height) * var(--title-line-cnt)),
    50vh,
    calc(240px + var(--title-line-height) * var(--title-line-cnt))
  );

  @media (max-width: 800px) {
    --post-top-gutter: max(
      calc(160px + var(--title-line-height) * var(--title-line-cnt)),
      calc(240px + 0.5 * var(--title-line-height) * var(--title-line-cnt))
    )
  }
}

.post > .title {
  --size: 48;
  --baseline-y: 48px;
  --line-height: var(--title-line-height);
  position: absolute;
  top: var(--post-top-gutter);
  left: 50%;
  transform: translateX(-50%) translateY(-100%);
  pointer-events: all;

  @media (max-width: 1150px) {
    transform: translateX(90px) translateX(-50%) translateY(-100%);
  }

  @media (max-width: 800px) {
    transform: translateX(-50%) translateY(-100%);
  }

  & .var-group {
    transform:
      translate(
        calc((var(--var-offset-x, 0px) + 1px * var(--grp-line-xdiff, var(--grp-xdiff))) * var(--size)),
        calc(var(--var-offset-y, 0px) * var(--size) + 
          (0px - 1px * var(--scroll, 0) * (var(--var-scale) - 0.5) / 2)
        )
      );

    filter: blur(calc(1px * var(--scroll, 0) * (var(--var-scale) - 0.7) / 10));
    opacity: calc(1 - var(--scroll, 0) * (var(--var-scale) - 0.5) / 200);
  }
}

.post > .surrogate-title {
  font-size: 48px;
  text-align: center;
  position: absolute;
  left: 50%;
  top: var(--post-top-gutter);
  width: min(80%, 100% - 80px);

  transform: translateX(-50%) translateY(-100%);

  @media (max-width: 1150px) {
    transform: translateX(90px) translateX(-50%) translateY(-100%);
  }

  @media (max-width: 800px) {
    transform: translateX(-50%) translateY(-100%);
  }
}

.post-content-wrapper {
  margin-top: calc(var(--post-top-gutter) + 100px);
  padding: 0px 240px 60px 240px;
  position: relative;

  @media (max-width: 1150px) {
    padding: 0px 60px 60px 240px;
  }

  @media (max-width: 800px) {
    padding: 0px 60px 60px 60px;
  }

  @media (max-width: 500px) {
    padding: 0px 40px 60px 40px;
  }
}

.post-content, .post-banner {
  max-width: 600px;
  @media (max-width: 950px) {
    max-width: 450px;
  }
  margin: 0 auto;
}

.post-content {
  font-size: 16px;
  line-height: 1.75;
  letter-spacing: 0.03125em;
}

.post-banner {
  position: relative;
  --banner-color: gray;
  --banner-color-darker: color-mix(in srgb, var(--banner-color) 50%, transparent 50%);
  --banner-color-lighter: color-mix(in srgb, var(--banner-color) 20%, transparent 80%);

  @media (prefers-color-scheme: dark) {
    &:not(.light) {
      --banner-color-darker: var(--banner-color);
      --banner-color-lighter: color-mix(in srgb, var(--banner-color) 40%, transparent 60%);
    }
  }

  background: linear-gradient(
    45deg,
    var(--banner-color-darker) 25%,
    var(--banner-color-lighter) 25%,
    var(--banner-color-lighter) 50%,
    var(--banner-color-darker) 50%,
    var(--banner-color-darker) 75%,
    var(--banner-color-lighter) 75%
  );
  background-size: 40px 40px;
  padding: 5px 5px 5px 30px;
  margin-bottom: 10px;
}

.post-banner-inner {
  background: color-mix(in srgb, var(--color-bg) 75%, transparent 25%);
  padding: 10px 20px;
  box-shadow: 0 2px 3px rgba(0,0,0,.3) inset;
  font-size: 16px;
  font-family: monospace;
}

.post-banner-amber {
  --banner-color: #c39e50;
}

.post-banner-green {
  --banner-color: #549518;
}

.post-metadata, .post-metadata-aux {
  & .post-metadata-line {
    display: flex;
    align-items: center;
  }


  & svg:not(.title) {
    height: 18px;
    fill: var(--color-fg-icon);
  }

  font-size: 14px;
  line-height: 18px;
}

.post-metadata {
  position: absolute;

  left: 0;
  right: 0;
  top: -80px; /* .post-content-wrapper was 50vh + 100px */

  @media (max-width: 1150px) {
    left: 180px;
  }

  @media (max-width: 800px) {
    left: 0;
  }

  @media (max-width: 500px) {
    position: relative;
    left: 0;
    flex-direction: column;
    margin-bottom: -40px;
    & .post-metadata-line {
      justify-content: center;
      margin-bottom: 5px;
    }
  }

  display: flex;
  justify-content: center;


  & .post-metadata-line {
    margin-right: 10px;
    margin-left: 10px;
  }
}
/* ... */

